added pom.xml to test totalcross builds for now, fixed small totalcross compilation errors with wrong classes